--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@types/marked": "^5.0.0",
     "@vitejs/plugin-vue": "^4.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
