--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,3 @@
 {
-  "builds": [
-    {
-      "use": "@vercel/next",
-      "config": {
-        "outputDirectory": "./next"
-      }
-    }
-  ]
+  "outputDirectory": "/next"
 }
