social icons added

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,6 @@
 {
-  "outputDirectory": "/next"
+  "framework": "nextjs",
+  "devCommand": "next dev",
+  "buildCommand": "next build",
+  "outputDirectory": "/.next"
 }
